fix read.me and swagger
